# swift-poll

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: main.rs
src/static/: control.html  echarts.min.js  poll.html  screen.html
