[package]
name = "swift-poll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "fast-rng", "macro-diagnostics"] }
futures = "0.3"
tokio-stream = "0.1"
